tests/query_errors/pipeline_unknown_port/error.txt
Error: 
    9 | select event from passthrough/snot into out;
      |                   ^^^^^^^^^^^ Query `passthrough` does not have port `snot`
